--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,14 @@
 			<version>5.2.0</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<version>3.1.1-1</version>
+			<version>3.6.1</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
